# proto-demo

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  main.cc
src/proto/: AddressBook.proto
